--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #e96443;
+$secondary-color: #904e95;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
